# ihm-tme

./: README.md  onedollar.py
TME-ihm-data-viz/: README.md  ai2d-tme-data-viz-RuizBravo-Rahaoui.ipynb  ai2d-tme-data-viz.ipynb  pyproject.toml
TME2_02-Fyfy_v41/RessourcesTME2/Libraries/bin_NET2.0/: FYFY.xml  Monitoring_Inspector.xml  PointerManager.xml  TriggerManager.xml
TME2_02-Fyfy_v41/RessourcesTME2/Libraries/bin_NET4.7/: CollisionManager.xml  FYFY_Inspector.xml  Monitoring.xml
TME2_02-Fyfy_v41/RessourcesTME2/Templates/: 1-FYFY__New System-NewSystem.cs.txt
TME_01-Unity_M1_V7/Scripts/: Eat.cs  Move.cs  VirusGenerator.cs  VirusMove.cs
TP_QT1/: mainWindow.py  sample.txt  sample2.txt
new_tp/: Canvas.py  MainWindow.py  README.md  log-paint.txt  resources.py  resources_rc.py
pyqt-onedollar/: Canvas.py  MainWindow.py  onedollar.py  templates.pkl
tp_pointage_eleve/: pilot_result.md
tp_pointage_eleve/tp_pointage (copy)/: CR_tme.txt  README.txt  cursor.py  design_fitts2D.csv  experiment.py  plot.py  pointing_data_sample.txt  target.py  test_window.py  window.py
tp_pointage_eleve/tp_pointage (copy)/img/: imgprops.txt
tp_pointage_eleve/tp_pointage (copy)/output/: XP_1_P1.csv
