[tool.poetry]
name = "ihm-data-viz"
version = "1.0.0"
description = "TME de visualisation de données de l'UE IHM AI2D"
authors = ["François Bouchet <francois.bouchet@lip6.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
plotly = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
